<resources>
    <string name="app_name">FridgeFriend</string>
    <string name="post">Post</string>
    <string name="camera">Camera</string>
    <string name="preview">Image</string>

    <string name="shop">Shopping List</string>
    <string name="add_to_list">Enter Item: Name, Amount, Type</string>
    <string name="action_settings">Settings</string>
    <string name="hint_item">pickles</string>
    <string name="hint_num">8</string>
    <string name="hint_type">oz</string>

    <string name="button_save">Save</string>
    <string name="empty_not_saved">Item Name or Item Amount were Empty</string>
    <string name="add_item">Add item</string>
    <string name="clear_all">Delete all items in list</string>
    <string name="edit_cat">Add, Edit, Delete Item Categories</string>
    <string name="update_item">Edit Item Here</string>
    <string name="clear">CLEAR ALL</string>

    <string name="hint_cat1">Produce</string>
    <string name="hint_cat2">Meat</string>
    <string name="hint_cat3">Grains</string>
    <string name="hint_cat4">Snacks</string>
    <string name="hint_cat5">Candy</string>
    <!-- figure out how to have these update -->

    <string name="item">Fish</string>
    <string name="numberOfItem">0</string>
    <string name="recipes_button">Recipes</string>
    <string name="grocery_list_button">Grocery List</string>
    <string name="my_fridge_button">My Fridge</string>
    <string name="spending_button">Spending</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>